@@ -19,6 +19,7 @@ src/gui/dialogs/mp_connect.cpp
 src/gui/dialogs/mp_create_game.cpp
 src/gui/dialogs/mp_method_selection.cpp
 src/gui/dialogs/title_screen.cpp
+src/gui/dialogs/transient_message.cpp
 src/gui/dialogs/wml_message.cpp
 src/gui/widgets/button.cpp
 src/gui/widgets/control.cpp
