@@ -8,6 +8,7 @@ Version 1.7.0+svn:
    * Added unit tests for the new widgets
    * Improved the layout algorithm not to show scrollbars when they make the
      situation worse
+   * Add a new transient message dialog
  * Miscellaneous and bugfixes:
    * Add strict compilation to cmake
    * Let cmake also use the CXXFLAGS and CFLAGS environment variables
